files/style.css
/* ... */
.section-content-l {
  background: #f8f8f8;
  /* height: 50vh; */
  margin-top: 1.5rem;
  margin-left: 0.8rem;
  margin-right: 1rem;
  text-wrap: wrap;
}

.section-content-l.interview {
  height: 54vh;
}

.section-content-r {
  background: #f8f8f8;
  height: 45vh;
  margin-top: 1.5rem;
  text-wrap: wrap;
}

.section-title {
  padding-top: 5rem;
  padding-left: 2rem;
  font-weight: bold;
  color: #682860;
  text-transform: uppercase;
  text-align: left;
  text-wrap: wrap;
}

.section-title.dark-bg {
  color: #d9c9d7;
}

.interview-title {
  padding-top: 7rem;
}

.interview-questions {
  display: flex;
  margin-top: 2rem;
  margin-left: 4.2rem;
  margin-right: 1.5rem;
}

.word-vomit {
  margin-top: 1rem;
  margin-left: 2rem;
  margin-right: 2rem;
  padding-right: 2rem;
  font-weight: 700;
  font-size: 1.8rem;
}

.research-goals {
  display: flex;
  font-display: row;
}

.research-goals-outline {
  margin-top: 1.5rem;
}

.background {
  background-color: #fff;
  width: 100vw;
}

.tagline {
  font-family: "tiempos-headline", serif;
  font-size: 3rem;
  font-weight: 900;
  letter-spacing: -1px;
  line-height: 3.8rem;
  margin-top: 5rem;
  margin-left: 10rem;
}

.tagline.dark {
  color: #fffefd;
}

.needfinding-content {
  margin-top: 2rem;
  color: #000;
  text-transform: none;
  font-weight: normal;
  max-width: 60vw;
}

.needfinding-content.indented {
  margin-left: 14rem;
}

.needfinding-content-1 {
  margin-top: 1rem;
  color: #000;
  text-transform: none;
  font-weight: normal;
  max-width: 60vw;
}

.needfinding-content.bulletpoint {
  margin-top: 0rem;
}

.needfinding-content.bulletpoint.tagline.light {
  margin-top: 5rem;
  margin-left: 6rem;
}

.needfinding-content.persona-text {
  color: #f8f8f8;
  margin-left: 2rem;
}

.needfinding-content.prototype {
  color: #000000;
  margin-left: 2rem;
}

.numeric-text {
  margin-top: 2rem;
  text-align: center;
  font-size: 5rem;
  font-family: "tiempos-headline", serif;
  color: #682860;
  font-weight: 300;
  letter-spacing: 0.03em;
  line-height: 1;
  display: inline-block;
}

.numeric-text-2 {
  margin-left: -1rem;
  margin-top: 2rem;
  font-size: 5rem;
  font-family: "tiempos-headline", serif;
  color: #682860;
  font-weight: 300;
  letter-spacing: 0.03em;
  line-height: 1;
  display: inline-block;
}

.numeric-text-3 {
  margin-left: 1rem;
  margin-right: 4.45rem;
  margin-top: 2rem;
  font-size: 5rem;
  font-family: "tiempos-headline", serif;
  color: #682860;
  font-weight: 300;
  letter-spacing: 0.03em;
  line-height: 1;
  display: inline-block;
  max-width: 800px;
}

.numeric-text.dark-bg {
  color: #d9c9d7;
}

.numeric-text.dark-bg.typo {
  color: #d9c9d7;
  margin-right: 4.4rem;
}

.result-card-wrapper-1 {
  display: flex;
  /* flex-wrap: wrap; */
  margin-left: 0.6rem;
  width: 80vw;
}

.result-card-wrapper-2 {
  display: flex;
  /* flex-wrap: wrap; */
  margin-left: 0.6rem;
  width: 60vw;
}

.result-card-wrapper-top {
  display: flex;
  margin-left: 10rem;
}

.result-card-top {
  margin-left: 6rem;
}

.result-card-top-2 {
  margin-left: 6.5rem;
  margin-top: 0rem;
}

.result-card-top-2.right {
  margin-left: 5.1rem;
  margin-right: 0.3rem;
  padding-right: 2.5rem;
}

.result-card-top-3 {
  margin-left: 5.5rem;
}

.result-card-top-4 {
  margin-left: 1.4rem;
  padding-left: 3rem;
}

.result-card-top-5 {
  margin-left: 5.5rem;
  margin-right: -3.5rem;
}

.result-card-top-6 {
  margin-left: 0rem;
  margin-right: -3.5rem;
  margin-top: 6rem;
}

.result-card-top-7 {
  margin-left: 6.5rem;
}

.result-card-top-8 {
  margin-left: 6.15rem;
}

.result-card {
  flex-direction: row;
  margin-right: 1rem;
  text-wrap: wrap;
}

.result-card.interview-questions-number {
  margin-left: 1.3rem;
  text-align: left;
  font-size: 3rem;
  width: 22vw;
}

.result-text {
  margin-top: 1rem;
  font-family: var(--bs-body-font-family), sans-serif;
  color: #000;
  font-size: 1.1rem;
  text-align: left;
  letter-spacing: -0.05em;
  text-transform: none;
}

.result-text.dark-bg {
  color: #d9c9d7;
}

.result-text.tinder {
  margin-left: 1rem;
}

.description {
  margin-top: 2rem;
}

.description-1 {
  margin-top: 2rem;
}

.description-2 {
  margin-top: 2.5rem;
  margin-left: -1.1rem;
}

.description-3 {
  margin-top: 2.5rem;
  margin-left: 15.8rem;
}

.description-4 {
  margin-top: 2.5rem;
  margin-left: 7.25rem;
}

.description-5 {
  margin-top: 2.5rem;
  margin-left: 20rem;
}

.description-6 {
  margin-top: 2.5rem;
}

.gap-y-12 {
  row-gap: 3rem;
}
.gap-x-gutter {
  -moz-column-gap: 1rem;
  column-gap: 1rem;
}
.grid-cols-3 {
  grid-template-columns: repeat(3, minmax(0, 1fr));
}
.grid {
  display: grid;
  margin-left: 10rem;
}

.sans-lg-bold,
.sans-lg-regular {
  font-family: "modern-era", sans-serif;
  font-size: 1.25rem;
  letter-spacing: 0;
}

.user-needs-grid {
  margin-top: 5rem;
  margin-right: 3.5rem;
  padding-top: 1.2rem;
  border-top: 1px solid #3e3d3d;
}

.user-needs-title {
  color: #f8f8f8;
  font-weight: 900;
  font-size: 1.2rem;
  letter-spacing: -0.05em;
  margin-bottom: 2rem;
}

.user-needs-content {
  color: #f8f8f8;
}

.user-quote {
  margin-top: 5rem;
  font-family: "tiempos-headline", serif;
  font-size: 2rem;
  color: #f8f8f8;
}

.user-quote-2 {
  margin-top: 3.5rem;
  font-family: "tiempos-headline", serif;
  font-size: 2rem;
  color: #f8f8f8;
}

.affinity-map {
  width: 50vw;
  padding-top: 3rem;
  display: block;
  margin: auto;
}

.affinity-map:hover {
  cursor: pointer;
}

.affinity-map-2 {
  width: 35.5vw;
  padding-top: 4rem;
  padding-bottom: 2rem;
  display: block;
  margin: auto;
}

.affinity-map-2:hover {
  cursor: pointer;
}

.image-wrapper {
  display: flex;
  justify-content: center;
}

.image-wrapper-map {
  display: flex;
  justify-content: center;
  margin-top: 1.2rem;
  margin-left: -1rem;
}

.image-wrapper-map-2 {
  display: flex;
  justify-content: right;
}

.image-wrapper.persona {
  margin-top: 5rem;
}

.persona-pic {
  width: 75vw;
}

.usability-testing-wrapper {
  margin-top: 2rem;
  margin-left: 2rem;
}
/* ... */

